nesc-frontend/src/test/resources/integration/programs/bad/bad20/C.nc
/* Calling a non-existent command from a parameterised interface. */

configuration C
{
}
implementation
{
   components M;
}
